--- a/partner_contact_role/views/res_partner_role.xml
+++ b/partner_contact_role/views/res_partner_role.xml
@@ -20,7 +20,7 @@
     <record model="ir.actions.act_window" id="res_partner_role_act_window">
         <field name="name">Partner Role</field>
         <field name="res_model">res.partner.role</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
     </record>
